# mailgen

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: builder.rs  email.rs  lib.rs
src/themes/: mod.rs
src/themes/default/: error.rs  mod.rs  template.html  template.text
