[package]
name = "mailgen"
description = "Mailgen generates clean, responsive HTML and Text e-mails for sending transactional mail"
version = "0.4.0"
authors = ["Atrox <hello@atrox.dev>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/atrox/mailgen"
homepage = "https://github.com/atrox/mailgen"
categories = ["email"]
keywords = ["email", "generator", "mailgen"]

[features]
default = ["default-theme"]
default-theme = ["dep:minijinja", "dep:css-inline", "dep:html2text"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"

minijinja = { version = "2.10.2", optional = true }
css-inline = { version = "0.14.0", optional = true, default-features = false }
html2text = { version = "0.15.0", optional = true }
